[package]
name = "volsungr"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "A command-line tool that searches for the latest version of a crate that is compatible with a specified version of the Rust toolchain."
repository = "https://github.com/kgilmer/volsungr"
readme = "README.md"

[dependencies]
crates_io_api = "0.8"
