[package]
name = "volsungr"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
description = "A command-line tool that searches for the latest version of a crate that is compatible with a specified version of the Rust toolchain."
repository = "https://github.com/kgilmer/volsungr"
readme = "README.md"

[dependencies]
argh = "0.1"
crates_io_api = "0.8.2"
toml = "0.8"
